# PythonProject11.1

./: .flake8  LICENSE.txt  README.md  main.py  mylog.txt  pyproject.toml  requirements.txt  transactions.csv
htmlcov/: index.html
src/: alphabetical.py  counting_operations.py  decorators.py  executive.py  external_api.py  file_interpretation.py  generators.py  masks.py  processing.py  read_transactions.py  search_by_string.py  utils.py  widget.py
src/decorators/: log.py
src/generators/: cards.py  transactions.py
tests/: conftest.py  mylog.txt  test_counting_operations.py  test_decorators.py  test_executive.py  test_external_api.py  test_file_interpretation.py  test_generators.py  test_mask.py  test_processing.py  test_read_transactions.py  test_search_by_string.py  test_utils.py  test_widget.py
