[tool.poetry]
name = "pythonproject11-1"
version = "0.1.0"
description = ""
authors = ["irina456 <iradyachenko27@gmail.com>"]
readme = "README.md"
packages = [{include = "pythonproject11"}]

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
